Move include/ down a level

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ OPT_FLAGS ?= -O2
 
 CFLAGS += -Wall -Wextra -Werror -Wno-char-subscripts\
 	$(OPT_FLAGS) -std=gnu99 -g3 -MD \
-	-I. -Iinclude
+	-I.
 LDFLAGS += $(OPT_FLAGS)
 
 ifeq ($(ENABLE_DEBUG), 1)
@@ -25,7 +25,7 @@ include Makefile.inc
 
 OBJ = $(SRC:.c=.o)
 
-blackmagic.elf: include/version.h $(OBJ)
+blackmagic.elf: version.h $(OBJ)
 	@echo "  LD      $@"
 	$(Q)$(CC) -o $@ $(OBJ) $(LDFLAGS)
 
@@ -46,12 +46,12 @@ blackmagic.elf: include/version.h $(OBJ)
 clean:	host_clean
 	$(Q)echo "  CLEAN"
 	-$(Q)$(RM) -f *.o *.d *~ blackmagic.elf $(HOSTFILES)
-	-$(Q)$(RM) -f mapfile include/version.h
+	-$(Q)$(RM) -f mapfile version.h
 
-command.c: include/version.h
+command.c: version.h
 
-include/version.h: FORCE
-	$(Q)echo "  GIT     include/version.h"
+version.h: FORCE
+	$(Q)echo "  GIT     version.h"
 	$(Q)echo "#define FIRMWARE_VERSION \"`git describe --always --dirty`\"" > $@
 
 -include *.d
